# gw-cli

./: .gitignore  CONTRIBUTING.md  GOOGLE_SETUP.md  README.md  config.example.yaml  email  gcal  gdrive  gw  gw.skill  pyproject.toml
.github/workflows/: install-test.yml
src/gw_cli/: __init__.py  auth.py  cli.py  config.py  utils.py
src/gw_cli/services/: calendar.py  docs.py  drive.py  gmail.py  sheets.py  slides.py
